Stomping layout bugs

--- a/assets/the-lipstick.css
+++ b/assets/the-lipstick.css
@@ -509,7 +509,6 @@ html {
 
     .fineprint {
         display: block;
-        width: 100%;
         text-align: center;
         border-style: none;
         background-color:rgb(255, 255, 255, 0.80);
